--- a/src/aura/AS_DiscountManager_SearchProductsSection/AS_DiscountManager_SearchProductsSection.css
+++ b/src/aura/AS_DiscountManager_SearchProductsSection/AS_DiscountManager_SearchProductsSection.css
@@ -116,10 +116,6 @@
     background-color: #29A7FB;
 }
 
-.THIS .result-table {
-}
-
-
 .THIS .hideElement {
     display: none;
 }
@@ -129,20 +125,20 @@
 }
 
 .THIS .table {
-    position: relative;
+    /*position: relative;*/
     width: 98%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.THIS .table .slds-truncate button {
-    height: 1rem;
-    width: 1rem;
-    background-color: red;
-    padding: 0;
-    margin-left: 0.5rem;
-}
+/*.THIS .table .slds-truncate button {*/
+/*    height: 1rem;*/
+/*    width: 1rem;*/
+/*    background-color: red;*/
+/*    padding: 0;*/
+/*    margin-left: 0.5rem;*/
+/*}*/
 
 .THIS .selectAllRow-btn {
     position: absolute;
@@ -199,4 +195,8 @@
 
 .THIS .buttons {
     margin-top: 3rem;
+}
+
+.THIS .button-group{
+    margin-top: 4rem;
 }
