--- a/src/aura/AS_Community_ProductMiniLayout/AS_Community_ProductMiniLayout.css
+++ b/src/aura/AS_Community_ProductMiniLayout/AS_Community_ProductMiniLayout.css
@@ -31,6 +31,22 @@
     opacity: 0.8;
     top: 55%;
     height: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.THIS .promotionIcon{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: -10%;
+    right: 38%;
+}
+
+.THIS .promotionIcon img{
+    width: 50%;
 }
 
 .THIS .product-mini-desc .product-name {
@@ -47,4 +63,24 @@
     font-size: 0.9rem;
 }
 
+.THIS .oldPrice {
+    position: relative;
+}
+
+.THIS .oldPrice p{
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: red;
+}
+
+.THIS .oldPrice::after{
+    text-align: center;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: green;
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+}
 
