--- a/src/aura/AS_SendErrorToast/AS_SendErrorToast.cmp
+++ b/src/aura/AS_SendErrorToast/AS_SendErrorToast.cmp
@@ -3,10 +3,8 @@
  -->
 
 <aura:component description="AS_SendErrorToast">
-    <aura:method name="sendResultToast" action="{!c.sendResultToast}" access="public">
-        <aura:attribute name="title" type="String"/>
-        <aura:attribute name="message" type="String"/>
-        <aura:attribute name="type" type="String"/>
-        <aura:attribute name="errors" type="Object[]"/>
+
+    <aura:method name="handleErrors" action="{!c.handleErrors}" access="public">
+        <aura:attribute name="errors" type="Object"/>
     </aura:method>
 </aura:component>
