--- a/src/aura/paginationTest/paginationTest.cmp
+++ b/src/aura/paginationTest/paginationTest.cmp
@@ -12,7 +12,10 @@
 
     <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>
 
-    <lightning:datatable keyField="Id" data="{!v.data}" columns="{!v.columns}" onrowselection="{!c.updateSelectedRow}"
+    <lightning:datatable keyField="Id"
+                         data="{!v.data}"
+                         columns="{!v.columns}"
+                         onrowselection="{!c.updateSelectedRow}"
                          selectedRows="{!v.selectedRows}"/>
 
     <lightning:buttonGroup>
